--- a/misc/demo.html
+++ b/misc/demo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <style>img:active{opacity:0.8}</style>
-    <script src="btoaUTF8.min.js"></script>
+    <script src="../btoaUTF8.min.js"></script>
 	<title>BestBase64EncoderDecoder Interactive Demonstration</title>
 </head>
 <body>
